resolve overflow issues

--- a/src/styles/containers/_app.scss
+++ b/src/styles/containers/_app.scss
@@ -32,6 +32,5 @@
     overflow: hidden;
     width: 100vw;
     display: flex;
-    will-change: transform;
   }
 }
