--- a/src/styles/containers/_menu.scss
+++ b/src/styles/containers/_menu.scss
@@ -1,10 +1,10 @@
 .menu-container {
   // todo: replace z-index references with z-index system
-  --z-index-overlay: 2000;
+  --z-index-overlay: 3000;
   position: absolute;
   top: -100vh;
   left: 0;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   background: var(--color-navy-taupe);
   @supports (backdrop-filter: blur(10px)) {
@@ -183,6 +183,7 @@
       width: 13rem;
       padding: .75rem 2rem;
       border: 1px solid var(--color-platinum);
+      background-clip: padding-box;
     }
   }
 
