--- a/src/styles/containers/_setupScreen.scss
+++ b/src/styles/containers/_setupScreen.scss
@@ -11,7 +11,7 @@
   .icon {
     &[name='settings'] {
       position: absolute;
-      bottom: 1.8rem;
+      top: 1.8rem;
       left: 1.8rem;
       margin: 2.5rem;
       z-index: 2000;
